--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -6,8 +6,9 @@ import Header from "@/components/Header.astro";
 
 interface Props {
   title?: string;
+  description?: string;
 }
-const { title = "Astro" } = Astro.props;
+const { title = "Astro", description = "An Astro website." } = Astro.props;
 ---
 
 <html lang="en">
@@ -16,6 +17,7 @@ const { title = "Astro" } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="description" content={description} />
     <title>{title}</title>
     <ClientRouter />
   </head>
