--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,10 @@ import Contact from "@/components/Contact.astro";
 import Footer from "@/components/Footer.astro";
 ---
 
-<MainLayout title="Bookmark Landing Page">
+<MainLayout
+  title="Bookmark Landing Page"
+  description="A Bookmark landing page challenge from Frontend Mentor."
+>
   <main>
     <Hero />
     <Features />
