Fixes Tailwind class order and other formatting issues

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -16,11 +16,7 @@ const { theme = "primary", ...rest } = Astro.props as Props;
 <button
   id={rest.id}
   type="button"
-  class:list={[
-    "rounded-md px-6 py-3 shadow-md transition duration-300",
-    variant[theme],
-    rest.class,
-  ]}
+  class:list={["rounded-md px-6 py-3 shadow-md transition duration-300", variant[theme], rest.class]}
 >
   <slot>Button</slot>
 </button>
