--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -6,8 +6,8 @@ import Button from "./Button.astro";
 <section class="bg-theme-white py-20">
   <div class="container">
     <div class="mx-auto px-2 sm:w-3/4 lg:w-5/12">
-      <h1 class="text-theme-blue text-center text-3xl">Frequently Asked Questions</h1>
-      <p class="text-theme-gray mt-4 text-center">
+      <h1 class="text-center text-3xl text-theme-blue">Frequently Asked Questions</h1>
+      <p class="mt-4 text-center text-theme-gray">
         Here are some of our FAQs. If you have any other questions you'd like answered please feel free
         to email us.
       </p>
