--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -2,10 +2,10 @@
 import FeatureArticle from "./FeatureArticle.astro";
 ---
 
-<section class="bg-theme-white mt-20 py-20 lg:mt-60">
+<section class="mt-20 bg-theme-white py-20 lg:mt-60">
   <div class="mx-auto px-2 sm:w-3/4 lg:w-5/12">
-    <h1 class="text-theme-blue text-center text-3xl">Features</h1>
-    <p class="text-theme-gray mt-4 text-center">
+    <h1 class="text-center text-3xl text-theme-blue">Features</h1>
+    <p class="mt-4 text-center text-theme-gray">
       Our aim is to make it quick and easy for you to access your favorite websites. Your bookmarks sync
       between your devices so you can access them on the go.
     </p>
