--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,13 +7,13 @@ import { Icon } from "astro-icon/components";
     <div class="py-1">
       <img src="/logo-bookmark.svg" alt="Bookmark Landing Page" />
     </div>
-    <ul class="text-theme-blue hidden flex-1 items-center justify-end gap-12 text-xs uppercase sm:flex">
+    <ul class="hidden flex-1 items-center justify-end gap-12 text-xs text-theme-blue uppercase sm:flex">
       <li class="cursor-pointer">Features</li>
       <li class="cursor-pointer">Pricing</li>
       <li class="cursor-pointer">Contact</li>
       <button
         type="button"
-        class="bg-theme-red rounded-md px-7 py-3 text-white uppercase hover:cursor-pointer">Login</button
+        class="rounded-md bg-theme-red px-7 py-3 text-white uppercase hover:cursor-pointer">Login</button
       >
     </ul>
     <div class="flex flex-1 justify-end sm:hidden">
