--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,12 +7,12 @@ import hero from "@/assets/hero-bg.png";
 <section class="relative">
   <div class="container mt-14 flex flex-col-reverse items-center gap-12 lg:mt-28 lg:flex-row">
     <div class="flex flex-1 flex-col items-center lg:items-start">
-      <h2 class="text-theme-blue mb-6 text-center text-3xl md:text-4xl lg:text-left lg:text-5xl">
+      <h2 class="mb-6 text-center text-3xl text-theme-blue md:text-4xl lg:text-left lg:text-5xl">
         A Simple Bookmark Manager
       </h2>
-      <p class="text-theme-gray mb-6 text-center text-lg lg:text-left">
-        A clean and simple interface to organize your favorite websites. Open a new browser tab and
-        see your sites load instantly. Try it for free.
+      <p class="mb-6 text-center text-lg text-theme-gray lg:text-left">
+        A clean and simple interface to organize your favorite websites. Open a new browser tab and see
+        your sites load instantly. Try it for free.
       </p>
       <div class="flex flex-wrap justify-center gap-6">
         <Button theme="primary">Get it on Chrome</Button>
@@ -29,7 +29,7 @@ import hero from "@/assets/hero-bg.png";
     </div>
   </div>
   <div
-    class="bg-theme-purple absolute top-32 right-0 hidden h-80 w-2/4 rounded-l-full md:block lg:-right-36 lg:-bottom-28"
+    class="absolute top-32 right-0 hidden h-80 w-2/4 rounded-l-full bg-theme-purple md:block lg:-right-36 lg:-bottom-28"
   >
   </div>
 </section>
