--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -11,7 +11,7 @@ import Button from "./Button.astro";
         <input
           type="email"
           placeholder="Enter your email address"
-          class="bg-theme-white flex-1 rounded-md px-2 py-3 text-black focus:outline-none"
+          class="flex-1 rounded-md bg-theme-white px-2 py-3 text-black focus:outline-none"
         />
         <Button class="bg-theme-red text-theme-white">Contact Us</Button>
       </div>
