--- a/src/components/Downloads.astro
+++ b/src/components/Downloads.astro
@@ -4,8 +4,8 @@ import DownloadCard from "./DownloadCard.astro";
 
 <section class="mt-20 py-20">
   <div class="mx-auto px-2 sm:w-3/4 lg:w-5/12">
-    <h1 class="text-theme-blue text-center text-3xl">Download the extension</h1>
-    <p class="text-theme-gray mt-4 text-center">
+    <h1 class="text-center text-3xl text-theme-blue">Download the extension</h1>
+    <p class="mt-4 text-center text-theme-gray">
       We've got more browsers in the pipeline. Please do let us know if you've got a favorite you'd like
       us to prioritize.
     </p>
