--- a/src/components/FAQItem.astro
+++ b/src/components/FAQItem.astro
@@ -4,5 +4,5 @@ import { Icon } from "astro-icon/components";
 
 <div class="flex items-center border-b py-4">
   <span class="flex-1"><slot /></span>
-  <Icon name="fa6-solid:chevron-down" class="text-theme-purple cursor-pointer" />
+  <Icon name="fa6-solid:chevron-down" class="cursor-pointer text-theme-purple" />
 </div>
